--- a/main/templates/main/report.html
+++ b/main/templates/main/report.html
@@ -7,7 +7,7 @@
     <form method="post" >
     {% csrf_token %}
     <select name="month">
-        {% for m in months %}
+        {% for m in n %}
               <option>{{ m }}</option>
         {% endfor %}
     </select>
